# lainstudio

./: Cargo.toml
src/: cycle_helper.rs  docs.rs  editor.rs  gui.rs  main.rs  modal_chrome.rs  peripherals.rs  sim_panel.rs  syntax.rs  theme.rs  toolbar.rs  uart_panel.rs  upload_panel.rs  waveforms.rs  welcome.rs  word_helper.rs
src/avr/: assembler.rs  cpu.rs  intel_hex.rs  io_map.rs  mod.rs
